# mipt-caos-yacurl

./: CMakeLists.txt  README.md  TODO.md  build.sh  run.sh
src/: CMakeLists.txt  Makefile  cli.c  cli.h  common.c  common.h  http.c  http.h  http_header.c  http_header.h  http_header_list.c  http_header_list.h  http_methods.c  http_methods.h  http_request.c  http_request.h  http_response.c  http_response.h  io.c  io.h  main.c  net.c  net.h  url.c  url.h
src/Debug/: test_net.c  test_server.py
src/app/: CMakeLists.txt  cli.c  cli.h
src/common/: CMakeLists.txt  common.h
src/http/: CMakeLists.txt  http_const.c  http_const.h  http_header.h  http_request.c  http_request.h  http_response.c  http_response.h  url.c  url.h
src/io/: CMakeLists.txt  io.c  io.h  net.c  net.h
tests/: CMakeLists.txt  test_net.c  test_server.py  tests_cli.c  tests_cli.txt  tests_http.c  tests_request.c  tests_response.1.in.http  tests_response.c
tests/app/: CMakeLists.txt  tests_cli.c  tests_cli.txt
tests/http/: CMakeLists.txt  tests_http.c  tests_request.c  tests_response.1.in.http  tests_response.3.in.http  tests_response.c
tests/io/: CMakeLists.txt  tests_net.c
